# billbox_dev_team

./: .gitignore  README.md  SPECS.md  pyproject.toml
backend/: README.md  billbox.db  start.sh
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: invoices.py
docs/: DEPLOY.md  PLAN.md
src/billbox_dev_team/: crew.py  main.py
src/billbox_dev_team/config/: agents.yaml  tasks.yaml  tasks.yaml.save
src/billbox_dev_team/tools/: cmd_tools.py  fs_tools.py  git_tools.py
web/pages/: create-invoice.js  dashboard.js  invoices.js  login.js  register.js
web/pages/invoice/: [id].js
web/utils/: apiClient.js
