[project]
name = "billbox_dev_team"
version = "0.1.0"
description = "billbox_dev_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.0"
]

[project.scripts]
billbox_dev_team = "billbox_dev_team.main:run"
run_crew = "billbox_dev_team.main:run"
train = "billbox_dev_team.main:train"
replay = "billbox_dev_team.main:replay"
test = "billbox_dev_team.main:test"
run_with_trigger = "billbox_dev_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
